@startuml
skinparam packageStyle rectangle
skinparam backgroundColor #FEFEFE
skinparam defaultFontName Consolas
skinparam defaultFontSize 11
hide circle
hide empty members

title "Vista de Datos — Sprint 1 (HU1 a HU5)\nLas flechas representan referencias (FK) a clases persistentes en otros archivos .json"
legend right
  == Referencias entre archivos .json ==
  [#90EE90] Verde  = Referencia a Publicacion
  [#FFAA66] Naranja = Referencia a Transaccion
  [black] Negro  = Otras referencias
  == Referencia local ==
  (sin flecha entre archivos)
endlegend

' ========================================================================
' ARCHIVO: usuarios.json
' ========================================================================
package "usuarios.json" as P_USUARIOS {
  class "Usuario" as USUARIO {
    + id : String [PK]
    + nombre : String
    + correoElectronico : String
    + telefono : String
    + descripcionPersonal : String
    + contrasenaHash : String
    + version : int
    + estado : String
    + rol : String
    + promedioCalificacion : float
    + cantidadCalificaciones : int
    + esVecinoDestacado : boolean
    + urlFotoPerfil : String
  }

  class "Monedero" as MONEDERO {
    + creditosDisponibles : float
    + creditosRetenidos : float
    + creditosPorLogros : float
  }

  class "Catalogo" as CATALOGO {
    + completado : boolean
  }

  class "Habilidad Ofrecida" as HAB_OFRE {
    + idInstancia : String [PK]
    + precioCreditos : int
    + descripcionServicio : String
  }

  class "Necesidad Registrada" as NEC_REG {
    + idInstancia : String [PK]
    + descripcionCondiciones : String
  }
}

' ========================================================================
' ARCHIVO: habilidades.json
' ========================================================================
package "habilidades.json" as P_HABILIDADES {
  class "Habilidad" as HABILIDAD {
    + id : String [PK]
    + categoria : String
  }
}

' ========================================================================
' ARCHIVO: publicaciones.json
' ========================================================================
package "publicaciones.json" as P_PUBLICACIONES {
  class "Usuario" as USUARIO_PUB {
  }

  class "Publicacion" as PUBLICACION {
    + idPublicacion : String [PK]
    + idUsuario : String [FK]
    + tipoPublicacion : String
    + nombreServicio : String
    + descripcion : String
    + precioCreditos : int
    + disponible : boolean
    + idInstanciaCatalogo : String [FK]
    + version : int
  }
}

' ========================================================================
' ARCHIVO: solicitudes.json
' ========================================================================
package "solicitudes.json" as P_SOLICITUDES {
  class "Usuario" as USUARIO_SOL {
  }

  class "Solicitud" as SOLICITUD {
    + idSolicitud : String [PK]
    + idPublicacion : String [FK]
    + idSolicitante : String [FK]
    + estado : String
    + fechaCreacion : long
    + fechaLimiteRespuesta : long
    + version : int
  }
}

' ========================================================================
' ARCHIVO: transacciones.json
' ========================================================================
package "transacciones.json" as P_TRANSACCIONES {
  class "Usuario" as USUARIO_TX {
  }

  class "Transaccion" as TRANSACCION {
    + idTransaccion : String [PK]
    + idPublicacion : String [FK]
    + idOfertante : String [FK]
    + idDemandante : String [FK]
    + estado : String
    + creditosRetenidos : int
    + confirmacionOfertante : boolean
    + confirmacionDemandante : boolean
    + fechaCreacion : long
    + version : int
  }

  class "Resena" as RESENA_TX {
    ' Solo nombre: atributos completos en resenas.json
  }
}

' ========================================================================
' ARCHIVO: resenas.json
' ========================================================================
package "resenas.json" as P_RESENAS {
  class "Usuario" as USUARIO_RES {
  }

  class "Resena" as RESENA {
    + idResena : String [PK]
    + idTransaccion : String [FK]
    + idEmisor : String [FK]
    + idReceptor : String [FK]
    + calificacion : int
    + fechaCreacion : long
    + version : int
  }
}

' ========================================================================
' ARCHIVO: subastas.json
' ========================================================================
package "subastas.json" as P_SUBASTAS {
  class "Usuario" as USUARIO_SUB {
  }

  class "Subasta" as SUBASTA {
    + id : String [PK]
    + idPropietario : String [FK]
    + nombreActivo : String
    + descripcion : String
    + estadoFisico : String
    + imagenesUrls : List~String~
    + fechaInicio : String
    + fechaFinalizacionLicitacion : String
    + estado : String
    + idPropuestaGanadora : String [FK]
    + version : int
  }

  class "Propuesta" as PROPUESTA {
    + idPropuesta : String [PK]
    + idSubasta : String [FK]
    + idPostor : String [FK]
    + descripcion : String
    + estadoFisico : String
    + estadoPropuesta : String
    + imagenesUrls : List~String~
    + fechaPropuesta : String
  }

  class "Bien Ofrecido" as BIEN {
    + nombre : String
    + cantidad : int
  }
}

' ========================================================================
' ARCHIVO: notificaciones.json
' ========================================================================
package "notificaciones.json" as P_NOTIF {
  class "Usuario" as USUARIO_NOT {
  }

  class "Notificacion" as NOTIFICACION {
    + idNotificacion : String [PK]
    + idRemitente : String [FK]
    + idDestinatario : String [FK]
    + mensaje : String
    + tipo : String
    + estadoLectura : boolean
    + fechaCreacion : long
  }
}

' ========================================================================
' ARCHIVO: correos_permitidos.json
' ========================================================================
package "correos_permitidos.json" as P_CORREOS {
  class "Correo Permitido" as CORREO {
    + id : String [PK]
    + correo : String
    + fechaCreacion : long
  }
}

' ========================================================================
' RELACIONES (INTERNAS A CADA ARCHIVO)
' ========================================================================
USUARIO *-- MONEDERO : contiene
USUARIO *-- CATALOGO : contiene
CATALOGO *-- HAB_OFRE : contiene
CATALOGO *-- NEC_REG : contiene
SUBASTA *-- PROPUESTA : contiene
PROPUESTA *-- BIEN : contiene
TRANSACCION *-- RESENA_TX : contiene (embebida)

' ========================================================================
' REFERENCIAS A USUARIO (locales, sin flecha entre archivos)
' ========================================================================
PUBLICACION --> USUARIO_PUB : idUsuario
SOLICITUD --> USUARIO_SOL : idSolicitante
TRANSACCION --> USUARIO_TX : idOfertante
TRANSACCION --> USUARIO_TX : idDemandante
RESENA --> USUARIO_RES : idEmisor
RESENA --> USUARIO_RES : idReceptor
SUBASTA --> USUARIO_SUB : idPropietario
PROPUESTA --> USUARIO_SUB : idPostor
NOTIFICACION --> USUARIO_NOT : idRemitente
NOTIFICACION --> USUARIO_NOT : idDestinatario

' ========================================================================
' REFERENCIAS A PUBLICACION (verde)
' ========================================================================
SOLICITUD -[#90EE90]-> PUBLICACION : idPublicacion
TRANSACCION -[#90EE90]-> PUBLICACION : idPublicacion

' ========================================================================
' REFERENCIAS A TRANSACCION (naranja)
' ========================================================================
RESENA -[#FFAA66]-> TRANSACCION : idTransaccion

' ========================================================================
' OTRAS REFERENCIAS (negro, todas cruzan archivos)
' ========================================================================
HAB_OFRE --> HABILIDAD : habilidadBase
NEC_REG --> HABILIDAD : necesidadBase
PUBLICACION --> HAB_OFRE : idInstanciaCatalogo
PUBLICACION --> NEC_REG : idInstanciaCatalogo

@enduml
